# getrel

./: .gitignore  README.md  pyproject.toml
doc/: datamodel.md
getrel/: __init__.py  _attic.py  cli.py  config.py  project.py  simplecli.py  utils.py
ghr_get/: __init__.py  _attic.py  cli.py  config.py  example.toml  project.py  utils.py
tests/: test_ghr.py  test_ghr_get.py  test_utils.py
