[tool.poetry]
name = "ghr-get"
version = "0.1.0"
description = "Downloader for github releases"
authors = ["Thorsten Vitt <thorsten.vitt@uni-wuerzburg.de>"]

[tool.poetry.scripts]
ghr-get = "ghr_get:_main"

[tool.poetry.dependencies]
python = "^3.10"
questionary = "^1.10.0"
requests = "^2.27.1"
rich = "^12.4.1"
tomlkit = "^0.10.2"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
