[tool.poetry]
name = "ghr-get"
version = "0.1.0"
description = "Downloader for github releases"
authors = ["Thorsten Vitt <thorsten.vitt@uni-wuerzburg.de>"]

[tool.poetry.scripts]
ghr-get = "ghr_get:_main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
tomlkit = "^0.10.2"
xdg = "^5.1.1"
rich = {version = "^12.4.1", optional = true}
questionary = {version = "^1.10.0", optional = true}
typer = {extras = ["all"], version = "^0.6.1", optional = true}
humanize = {version = "^4.2.3", optional = true}
python-magic = {version = "^0.4.27", optional = true}

[tool.poetry.extras]
tui = ["rich", "questionary", "typer", "humanize", "python-magic"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
