[tool.poetry]
name = "getrel"
version = "0.1.0"
description = "Downloader for github releases"
authors = ["Thorsten Vitt <thorsten.vitt@uni-wuerzburg.de>"]

[tool.poetry.scripts]
getrel = "getrel:_main"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.27.1"
tomlkit = "^0.10.2"
xdg = "^5.1.1"
rich = {version = "^12.4.1", optional = true}
questionary = {version = "^1.10.0", optional = true}
typer = "^0.6.1"
humanize = {version = "^4.2.3", optional = true}
python-magic = {version = "^0.4.27", optional = true}
durations = "^0.3.3"

[tool.poetry.extras]
tui = ["rich", "questionary", "typer", "humanize", "python-magic"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pyinstaller = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

